--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'org.java-websocket:Java-WebSocket:1.5.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation 'commons-io:commons-io:2.11.0'
 }
