--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'commons-io:commons-io:2.11.0'
     implementation "com.squareup.picasso:picasso:2.4.0"
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
 }
