--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,15 @@
         android:theme="@style/Theme.Cart2Go"
         tools:targetApi="33">
         <activity
-            android:name=".Add_IInventory"
-            android:exported="false" />
+            android:name=".Generate_Crate"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
+        <activity
+            android:name=".Add_Inventory"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
         <activity
             android:name=".backend.AddProductEdit"
             android:exported="true"
